ingress/kubeapps/rabbitmq/rabbitmq-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: rabbitmq
  namespace: rabbitmq
spec:
#   tls:
#   - hosts:
#     - lope.test
#     secretName: lope-tls-secret
  rules:
  - host: rabbitmq.lope.test
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbitmq
          servicePort: 15672
